# repvar

./: README.md  pyproject.toml
.github/workflows/: python-package.yml  python-publish.yml
src/repvar/: __init__.py  __main__.py  var_replace.py
