[project]
name = "repvar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "vamanfredi@frba.utn.edu.ar", email = "vamanfredi@frba.utn.edu.ar" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
repvar = "repvar:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
