[project]
name = "repvar"
version = "0.1.22"
description = "Easily replace variables within file contents and filenames!"
readme = "README.md"
authors = [
    { name = "Valentin Manfredi", email = "vamanfredi@frba.utn.edu.ar" }
]
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15.1",
]
classifiers =[
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Topic :: Utilities",
    "Topic :: Text Processing"
]

[project.scripts]
repvar = "repvar.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/repvar"]

[project.urls]
Homepage = "https://github.com/vamanfredi/repvar"
